<resources>
    <string name="app_name">CWGL</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">CWGL</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="je">金额：</string>
    <string name="qsrje">请输入金额</string>
    <string name="fs">方式：</string>
    <string name="fl">分类：</string>
    <string name="sj">时间：</string>
    <string name="bz">备注：</string>
    <string name="srbz">请输入备注</string>
    <string name="cz">重置</string>
    <string name="ok">确定</string>
    <string name="sr">收入</string>
    <string name="zc">支出</string>
    <string name="szgl">收支管理</string>
    <string name="htgl">合同管理</string>
    <string name="szck">收支查看</string>
    <string name="grzx">个人中心</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
